--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = "^3.9"
 packitos = ">=0.65"
 specfile = ">=0.13"
 alpa_conf = ">=0.4.0"
-pyalpa = ">=0.4.0"
+pyalpa = ">=0.5.1"
 
 
 [build-system]
@@ -27,4 +27,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 check-packit-file = "pre_commit_hooks.check_packit_file:main"
 check-necessary-files = "pre_commit_hooks.check_necessary_files:main"
-source0-uses-version = "pre_commit_hooks.source0_uses_version:main"
+source0-uses-version-macro = "pre_commit_hooks.source0_uses_version_macro:main"
